icon sidebar fix

--- a/sidebar.html
+++ b/sidebar.html
@@ -13,13 +13,13 @@
         <div class="top-btn">
           <ul class="top-btn__list">
             <li class="top-btn__item">
-              <button class="button"></button>
+              <button class="button close"></button>
             </li>
             <li class="top-btn__item top-btn__item--margin-auto">
               <a class="logo" href=""></a>
             </li>
             <li class="top-btn__item">
-              <button class="button"></button>
+              <button class="button search"></button>
             </li>
           </ul>
         </div>
@@ -54,9 +54,9 @@
         <div class="bottom-btn">
           <div class="group">
             <ul class="group__list">
-              <li class="group__item"><button class="button"></button></li>
-              <li class="group__item"><button class="button"></button></li>
-              <li class="group__item"><button class="button"></button></li>
+              <li class="group__item"><button class="button call"></button></li>
+              <li class="group__item"><button class="button chat"></button></li>
+              <li class="group__item"><button class="button profile"></button></li>
             </ul>
           </div>
           <a class="email" href="mailto:mail@cps.com">mail@cps.com</a>
