link textBtn divider fix

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
         <nav class="header__nav">
           <ul class="header__list">
             <li class="header__item"><button class="button burger"></button></li>
-            <li class="header__item"></li>
-            <li class="header__item"><a class="logo" href="#"></a></li>
-            <li class="header__item"></li>
+            <li class="header__item header__item--divider"></li>
+            <li class="header__item">
+              <a class="logo" href="#">
+                <img src="./img/Group.svg" alt="logo" />
+              </a>
+            </li>
+            <li class="header__item header__item--divider"></li>
             <li class="header__item"><button class="button call"></button></li>
             <li class="header__item"><button class="button chat"></button></li>
             <li class="header__item"><button class="button profile"></button></li>
-            <li class="header__item"></li>
+            <li class="header__item header__item--divider"></li>
             <li class="header__item"><button class="button repair"></button></li>
             <li class="header__item"><button class="button checklist"></button></li>
           </ul>
@@ -31,9 +35,11 @@
           <div class="title__button">
             <ul class="title__list">
               <li class="title__item">
+                <span class="title__attributed">Оставить заявку</span>
                 <button class="button repair"></button>
               </li>
               <li class="title__item">
+                <span class="title__attributed">Статус ремонта</span>
                 <button class="button checklist"></button>
               </li>
             </ul>
