--- a/sidebar.html
+++ b/sidebar.html
@@ -16,7 +16,9 @@
               <button class="button close"></button>
             </li>
             <li class="top-btn__item top-btn__item--margin-auto">
-              <a class="logo" href=""></a>
+              <a class="logo" href="#">
+                <img src="./img/Group.svg" alt="logo" />
+              </a>
             </li>
             <li class="top-btn__item">
               <button class="button search"></button>
