divider btn  fix

--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
           <div class="title__button">
             <ul class="title__list">
               <li class="title__item">
-                <span class="title__attributed">Оставить заявку</span>
-                <button class="button repair"></button>
+                <button class="notify">
+                  <span class="notify__attributed">Оставить заявку</span>
+                  <img class="button" src="./img/repair.svg" alt="" />
+                </button>
               </li>
               <li class="title__item">
-                <span class="title__attributed">Статус ремонта</span>
-                <button class="button checklist"></button>
+                <button class="notify">
+                  <span class="notify__attributed">Оставить заявку</span>
+                  <img class="button" src="./img/checkstatus.svg" alt="" />
+                </button>
               </li>
             </ul>
           </div>
